--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cinemania",
   "version": "0.1.0",
+  "homepage": "https://tkravche.github.io/cinemania/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
